CloudAlpacas/salesforce/main/default/objects/SDO_Analytics_Survey_Subject__c/SDO_Analytics_Survey_Subject__c.object-meta.xml
<CustomObject>
    <description>Shadow object for SurveySubject. Stores demo CSAT subject rows linking invitations to Cases. Feeds ssot__SurveySubject__dlm via a SalesforceDotCom data stream in Data Cloud.</description>
    <label>SDO Analytics Survey Subject</label>
    <nameField>
        <displayFormat>SSUB-{00000}</displayFormat>
        <label>SDO Analytics Survey Subject Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SDO Analytics Survey Subjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>