CloudAlpacas/salesforce/main/default/objects/SDO_Analytics_Survey_Subject__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to Case. Maps to ssot__SurveySubjectId__c on ssot__SurveySubject__dlm.</description>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>SDO Analytics Survey Subjects</relationshipLabel>
    <relationshipName>SDO_Analytics_Survey_Subjects</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>