CloudAlpacas/salesforce/main/default/objects/SDO_Analytics_Survey_Subject__c/fields/Survey_Invitation_Id__c.field-meta.xml
<CustomField>
    <fullName>Survey_Invitation_Id__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to shadow Invitation. Maps to ssot__SurveyParentId__c on ssot__SurveySubject__dlm.</description>
    <label>Survey Invitation Id</label>
    <referenceTo>SDO_Analytics_Survey_Invitation__c</referenceTo>
    <relationshipName>SurveySubjectInvitationId</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>